--- a/MSPM0_ValvanoWare/MSPM0_ValvanoWare/ECE319K_Lab6/Debug/makefile
+++ b/MSPM0_ValvanoWare/MSPM0_ValvanoWare/ECE319K_Lab6/Debug/makefile
@@ -135,10 +135,10 @@ endif
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXE_OUTPUTS += \
-ECE319K_Lab6.out \
+ECE319K_Lab6.out 
 
 EXE_OUTPUTS__QUOTED += \
-"ECE319K_Lab6.out" \
+"ECE319K_Lab6.out" 
 
 
 # All Target
