--- a/MSPM0_ValvanoWare/MSPM0_ValvanoWare/ECE319K_Lab8H/Debug/makefile
+++ b/MSPM0_ValvanoWare/MSPM0_ValvanoWare/ECE319K_Lab8H/Debug/makefile
@@ -133,10 +133,10 @@ endif
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXE_OUTPUTS += \
-ECE319K_Lab8H.out \
+ECE319K_Lab8H.out 
 
 EXE_OUTPUTS__QUOTED += \
-"ECE319K_Lab8H.out" \
+"ECE319K_Lab8H.out" 
 
 
 # All Target
