--- a/MSPM0_ValvanoWare/MSPM0_ValvanoWare/ECE319K_Lab7H/Debug/makefile
+++ b/MSPM0_ValvanoWare/MSPM0_ValvanoWare/ECE319K_Lab7H/Debug/makefile
@@ -131,10 +131,10 @@ endif
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXE_OUTPUTS += \
-ECE319K_Lab7H.out \
+ECE319K_Lab7H.out 
 
 EXE_OUTPUTS__QUOTED += \
-"ECE319K_Lab7H.out" \
+"ECE319K_Lab7H.out" 
 
 
 # All Target
